<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <SwitchPreference
        android:defaultValue="false"
        android:key="ext"
        android:summary="@string/show_list_long_press_summary"
        android:title="@string/show_list_long_press" />
    <SwitchPreference
        android:defaultValue="false"
        android:key="menupst"
        android:summary="@string/show_list_menu_summary"
        android:title="@string/show_list_menu" />
    <SwitchPreference
        android:defaultValue="false"
        android:key="btnpst"
        android:summary="@string/show_list_floating_button_summary"
        android:title="@string/show_list_floating_button" />
    <SwitchPreference
        android:defaultValue="false"
        android:key="webvpst"
        android:summary="@string/show_list_web_summary"
        android:title="@string/show_list_web" />
    <SwitchPreference
        android:defaultValue="false"
        android:key="overlay"
        android:summary="@string/show_overlay_list_summary"
        android:title="@string/show_overlay_list" />

    <PreferenceScreen
        android:key="donate"
        android:summary="@string/donate_summary"
        android:title="@string/donate" />

</PreferenceScreen>